[project]
name = "real-time-transcript"
version = "0.1.0"
description = "Real-time audio transcription and translation using Whisper and Ollama"
requires-python = ">=3.10,<3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.21.0", 
    "whispercpp",
    "ollama",
    "wcwidth>=0.2.5",
    "soundfile>=0.12.1",
    "psutil>=5.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]